--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,3 +9,32 @@
       font-family: Inter, sans-serif;
     }
 }
+
+.loader-line {
+  width: 100%;
+  height: 4px;
+  background-color: #35B972;
+  position: relative;
+  overflow: hidden;
+}
+
+.loader-line::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: #ffffffcc;
+  position: absolute;
+  top: 0;
+  left: -100%;
+  animation: loading 1.5s infinite linear;
+}
+
+@keyframes loading {
+  0% {
+    left: -100%;
+  }
+  100% {
+    left: 100%;
+  }
+}
