--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -68,3 +68,70 @@
 .animate-leave {
   animation: leave 0.3s ease-in forwards;
 }
+
+.shimmer-loading-effect {
+  background: rgba(255, 255, 255, 0);
+  background: -webkit-linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.75) 50%,
+    rgba(255, 255, 255, 0) 100%
+  );
+  background: -moz-linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.75) 50%,
+    rgba(255, 255, 255, 0) 100%
+  );
+  background: -ms-linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.75) 50%,
+    rgba(255, 255, 255, 0) 100%
+  );
+  background: -o-linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.75) 50%,
+    rgba(255, 255, 255, 0) 100%
+  );
+  background: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.75) 50%,
+    rgba(255, 255, 255, 0) 100%
+  );
+  opacity: 0.75;
+  background-size: 400% 400%;
+  -webkit-animation: shimmer-loading-effect 1s linear infinite;
+  -moz-animation: shimmer-loading-effect 1s linear infinite;
+  animation: shimmer-loading-effect 1s linear infinite;
+  height: 100vh;
+}
+
+@-webkit-keyframes shimmer-loading-effect {
+  0% {
+    background-position: 100% 0%;
+  }
+  100% {
+    background-position: 15% 100%;
+  }
+}
+
+@-moz-keyframes shimmer-loading-effect {
+  0% {
+    background-position: 100% 0%;
+  }
+  100% {
+    background-position: 15% 100%;
+  }
+}
+
+@keyframes shimmer-loading-effect {
+  0% {
+    background-position: 100% 0%;
+  }
+  100% {
+    background-position: 15% 100%;
+  }
+}
